--- a/Application/index.html
+++ b/Application/index.html
@@ -165,6 +165,7 @@
                 <div class="success-text">Success!</div>
                 <div class="description line-1"> Azure DevOps Project has been successfully setup Today ~ 2019-04-24</div>
                 <div class="description line-2">  Today ////  2019-04-24</div>
+                <div class="description line-2">  Add line </div>
                 <div class="description line-3"> Your Node.js app is up and running on Azure</div>
                 <div class="next-steps-container">
                     <div class="next-steps-header">Next up</div>
