--- a/Application/index.html
+++ b/Application/index.html
@@ -163,9 +163,11 @@
             </div>
             <div class="content-body">
                 <div class="success-text">Success!</div>
-                <div class="description line-1"> Azure DevOps Project has been successfully setup Today ~ 2019-04-24</div>
+                <div class="description line-1"> Azure DevOps Project has been successfully setup Today</div>
+                <!--
                 <div class="description line-2">  Today ////  2019-04-24</div>
                 <div class="description line-2">  Add line </div>
+                -->
                 <div class="description line-3"> Your Node.js app is up and running on Azure</div>
                 <div class="next-steps-container">
                     <div class="next-steps-header">Next up</div>
